Fix dateTime gap issue

--- a/src/app/shared/dynamic-form/components/form-datetime/form-datetime.component.scss
+++ b/src/app/shared/dynamic-form/components/form-datetime/form-datetime.component.scss
@@ -1,6 +1,6 @@
 .datetime-picker {
   display: inline-flex;
-  gap: 24px;
+  gap: 20px;
 
   .time {
     width: 93px;
